--- a/src/styles/blocks/pet-list-section.scss
+++ b/src/styles/blocks/pet-list-section.scss
@@ -38,6 +38,9 @@
 
   &__pet-img {
     margin-bottom: 20px;
+    border-radius: 8px;
+    width: 370px; // жесткая разметка, лучше изменить
+    height: 280px;
   }
 
   &__pet-info-cont {
