страница main. Исправил недочеты:
-при перезагрузке страницы на карточке питомца ничего не теряется
-в nav'е ссыкла подсвечивается как активная при опускании давльше в дерево
-при изменение маршрута прокрутка страницы возвращается вверх
-отрефакторил некоторые шрифты
-добавил иконки

--- a/src/styles/blocks/card.scss
+++ b/src/styles/blocks/card.scss
@@ -172,6 +172,9 @@
         font-size: 1.25rem;
         padding: 0.625rem 2.25rem;
         border-width: 1.3px;
+        align-items: center;
+        display: flex;
+        gap: 15px;
 
         &:hover {
             background-color: $header-link-bg;
