--- a/src/index.css
+++ b/src/index.css
@@ -326,6 +326,9 @@ img {
   font-size: 1.25rem;
   padding: 0.625rem 2.25rem;
   border-width: 1.3px;
+  align-items: center;
+  display: flex;
+  gap: 15px;
 }
 .more-info__button:hover {
   background-color: #4796F3;
@@ -352,14 +355,21 @@ img {
 }
 .pets-section__type-filter {
   display: flex;
-  gap: 40px;
+  gap: 30px;
+  align-items: center;
 }
 .pets-section__type-filter-item {
-  line-height: 1.2rem;
+  line-height: 1.375rem;
+  font-weight: 200;
   cursor: pointer;
 }
 .pets-section__type-filter-item--active {
-  text-decoration: underline;
+  padding: 0.3125rem 1.5625rem;
+  border: 1px solid black;
+  border-radius: 20px;
+}
+.pets-section__filter-button {
+  font-weight: 200;
 }
 .pets-section__pets-list {
   display: grid;
@@ -597,13 +607,11 @@ img {
   display: flex;
   gap: 30px;
 }
-
 .about-shelter h2 {
   font-size: 2.25rem;
   font-weight: 400;
   line-height: 2.7rem;
 }
-
 .about-shelter p {
   font-size: 1.25rem;
   font-weight: 100;
@@ -619,14 +627,12 @@ img {
   flex-direction: column;
   gap: 12px;
 }
-
 .our-shelter__header {
   display: flex;
   align-items: center;
   gap: 20px;
   margin-bottom: 25px;
 }
-
 .our-shelter__logo-img {
   width: 50.52px;
   height: 45px;
@@ -634,23 +640,22 @@ img {
 
 .our-mission {
   padding-top: 1.5625rem;
-  max-width: 425px;
+  max-width: 450px;
 }
-
 .our-mission__title {
   margin-bottom: 34px;
 }
-
 .our-mission__missions-list {
   display: flex;
   flex-direction: column;
   gap: 15px;
 }
-
-.our-mission__mission {
+.our-mission__missions-list__mission {
+  display: flex;
+  gap: 15px;
   border-radius: 20px;
   border: 1.3px solid #4796F3;
-  padding: 0.75rem 1.25rem;
+  padding: 0.75rem 1rem;
 }
 
 .adopt-steps {
