--- a/src/styles/blocks/our-mission.scss
+++ b/src/styles/blocks/our-mission.scss
@@ -1,18 +1,19 @@
-.about-shelter{
+.about-shelter {
     margin-top: 80px;
     display: flex;
-    gap: 30px
-}
-.about-shelter h2{
-    font-size: 2.25rem;
-    font-weight: 400;
-    line-height: 2.7rem;
-}
+    gap: 30px;
 
-.about-shelter p{
-    font-size: 1.25rem;
-    font-weight: 100;
-    line-height: 1.75rem;
+    h2 {
+        font-size: 2.25rem;
+        font-weight: 400;
+        line-height: 2.7rem;
+    }
+
+    p {
+        font-size: 1.25rem;
+        font-weight: 100;
+        line-height: 1.75rem;
+    }
 }
 
 .our-shelter {
@@ -20,36 +21,42 @@
     border-radius: 20px;
     padding: 1.5625rem 2.5rem;
     max-width: 721px;
-
     display: flex;
     flex-direction: column;
-    gap: 12px
-}
-.our-shelter__header {
-    display: flex;
-    align-items: center;
-    gap: 20px;
-    margin-bottom: 25px;
-}
-.our-shelter__logo-img {
-    width: 50.52px;
-    height: 45px;
+    gap: 12px;
+
+    &__header {
+        display: flex;
+        align-items: center;
+        gap: 20px;
+        margin-bottom: 25px;
+    }
+
+    &__logo-img {
+        width: 50.52px;
+        height: 45px;
+    }
 }
 
 .our-mission {
     padding-top: 1.5625rem;
-    max-width: 425px;
-}
-.our-mission__title {
-    margin-bottom: 34px;
-}
-.our-mission__missions-list {
-    display: flex;
-    flex-direction: column;
-    gap: 15px;
-}
-.our-mission__mission {
-    border-radius: 20px;
-    border: 1.3px solid $header-link-bg;
-    padding: 0.75rem 1.25rem;
+    max-width: 450px;
+
+    &__title {
+        margin-bottom: 34px;
+    }
+
+    &__missions-list {
+        display: flex;
+        flex-direction: column;
+        gap: 15px;
+
+        &__mission {
+            display: flex;
+            gap: 15px;
+            border-radius: 20px;
+            border: 1.3px solid $header-link-bg;
+            padding: 0.75rem 1rem;
+        }
+    }
 }
