--- a/src/index.css
+++ b/src/index.css
@@ -1,3 +1,4 @@
+@charset "UTF-8";
 /* 
 cd animal-shelter  
 sass --watch src/styles/index.scss src/index.css
@@ -291,8 +292,12 @@ img {
   gap: 15px;
 }
 .pet-card__slider-item img {
-  aspect-ratio: 1/1;
   border-radius: 6px;
+  width: 100%;
+  height: 100%; /* Высота изображения равна высоте контейнера */
+  max-height: 140px;
+  object-fit: cover; /* Изображение масштабируется и обрезается, сохраняя пропорции */
+  overflow: hidden; /* Скрывает обрезанные части */
 }
 .pet-card__slider-item--active img {
   opacity: 0.5;
@@ -377,14 +382,15 @@ img {
   gap: 30px 45px;
 }
 .pets-section__pet-item {
-  max-width: 100%;
   cursor: pointer;
 }
 .pets-section__pet-img {
   margin-bottom: 20px;
-  border-radius: 8px;
   width: 370px;
   height: 280px;
+  border-radius: 8px;
+  object-fit: cover;
+  overflow: hidden;
 }
 .pets-section__pet-info-cont {
   display: flex;
@@ -417,7 +423,7 @@ img {
 }
 
 .main-footer {
-  margin-top: 109px;
+  margin-top: 125px;
   background-color: #EFF6FF;
   padding: 67px 0;
   position: relative;
@@ -749,6 +755,247 @@ img {
   transform: translate(-50%, -50%);
   width: 18.5px;
   height: 40px;
+}
+
+.how-to-adopt {
+  margin-top: 40px;
+}
+
+.how-to-adopt__list {
+  display: flex;
+  flex-direction: column;
+  gap: 80px;
+  margin-top: 50px;
+}
+
+.how-to-adopt__step {
+  display: flex;
+  gap: 40px;
+}
+
+.how-to-adopt__step-card-wrapper {
+  width: 373px;
+  display: flex;
+  flex-direction: column;
+  justify-content: space-between;
+}
+
+.how-to-adopt__step-card {
+  display: flex;
+  max-width: 373px;
+  width: 100%;
+  padding: 30px 15px 30px 30px;
+  border-radius: 20px;
+  position: relative;
+  overflow: hidden;
+}
+.how-to-adopt__step-card--1 {
+  background-color: #D2E6FF;
+  height: 295px;
+}
+.how-to-adopt__step-card--1::after {
+  background-image: url("././assets/imgs/how-to-adopt__step-card-1-bg.png");
+}
+.how-to-adopt__step-card--1 .how-to-adopt__step-number::after {
+  background-image: url("././assets/icons/number-1.svg");
+}
+.how-to-adopt__step-card--2 {
+  background-color: #FFCEE6;
+}
+.how-to-adopt__step-card--2::after {
+  background-image: url("././assets/imgs/how-to-adopt__step-card-2-bg.png");
+}
+.how-to-adopt__step-card--2 .how-to-adopt__step-number::after {
+  background-image: url("././assets/icons/number-2.svg");
+}
+.how-to-adopt__step-card--3 {
+  background-color: #FFE7BD;
+}
+.how-to-adopt__step-card--3::after {
+  background-image: url("././assets/imgs/how-to-adopt__step-card-3-bg.png");
+}
+.how-to-adopt__step-card--3 .how-to-adopt__step-number::after {
+  background-image: url("././assets/icons/number-3.svg");
+}
+.how-to-adopt__step-card p {
+  margin-top: auto;
+  font-size: 1.5rem;
+  font-weight: 300;
+  line-height: 2rem;
+  text-align: left;
+}
+.how-to-adopt__step-card::before {
+  content: "";
+  position: absolute;
+  top: -206px;
+  left: -204px;
+  background-color: transparent;
+  border-radius: 50%;
+  border: 4px solid white;
+  width: 353px;
+  height: 307px;
+}
+.how-to-adopt__step-card:after {
+  content: "";
+  position: absolute;
+  width: 282px;
+  height: 286px;
+  top: 0px;
+  right: -30px;
+  background-repeat: no-repeat;
+}
+
+.how-to-adopt__step-number {
+  position: absolute;
+  border-radius: 50%;
+  width: 90px;
+  height: 90px;
+  background-color: white;
+  top: 30px;
+  left: 30px;
+}
+.how-to-adopt__step-number::after {
+  content: "";
+  position: absolute;
+  background-repeat: no-repeat;
+  background-size: contain;
+  top: 50%;
+  left: 50%;
+  transform: translate(-50%, -50%);
+  width: 18.5px;
+  height: 40px;
+}
+
+.how-to-adopt__questionnaire {
+  padding: 1rem 2.25rem;
+  width: 100%;
+  font-size: 1.5rem;
+  font-weight: 300;
+  line-height: 2rem;
+}
+
+.how-to-adopt__content {
+  display: flex;
+  flex-direction: column;
+  gap: 12px;
+  max-width: 787px;
+}
+.how-to-adopt__content p, .how-to-adopt__content li {
+  font-size: 1.25rem;
+  font-weight: 200;
+  line-height: 1.6875rem;
+  text-align: left;
+}
+
+.how-to-adopt__content ol {
+  list-style-type: decimal;
+  margin-left: 1.5rem;
+  padding-left: 0;
+}
+
+.ways-to-help {
+  background-color: #EFF6FF;
+  padding: 51px 0;
+  overflow: hidden;
+}
+
+.ways-to-help__donation-card {
+  background-color: white;
+  border-radius: 30px;
+  width: 593px;
+  box-shadow: 0px 4px 8px 0px rgba(82, 117, 158, 0.2509803922);
+  padding: 1.875rem 2.5rem;
+  display: flex;
+  flex-direction: column;
+  align-items: center;
+}
+.ways-to-help__donation-card button {
+  font-size: 1.25rem;
+  font-weight: 300;
+  line-height: 1.5625;
+  padding: 0.75rem 3.75rem;
+  margin-top: 30px;
+}
+.ways-to-help__donation-card p {
+  font-size: 1.125rem;
+  font-weight: 200;
+  line-height: 1.5rem;
+  text-align: center;
+  margin-top: 15px;
+}
+
+.ways-to-help__donation-cards-cont {
+  display: flex;
+  flex-direction: column;
+  align-items: center;
+  gap: 40px;
+}
+
+.financial-help {
+  text-align: center;
+  display: flex;
+  margin-top: 60px;
+}
+.financial-help__content {
+  margin-top: 40px;
+  max-width: 710px;
+}
+.financial-help h2 {
+  font-size: 2rem;
+  font-weight: 400;
+  line-height: 2.625rem;
+  text-align: center;
+}
+.financial-help__bank-details {
+  display: flex;
+  justify-content: space-between;
+  margin-top: 20px;
+  gap: 20px;
+}
+.financial-help__box {
+  border: 1.5px solid #4796F3;
+  border-radius: 20px;
+  padding: 25px 20px 30px 30px;
+  text-align: left;
+  max-width: 340px;
+}
+.financial-help__box h3 {
+  font-size: 1.25rem;
+  font-weight: 400;
+  line-height: 1.75rem;
+  margin-bottom: 20px;
+}
+.financial-help__requisite {
+  display: flex;
+  flex-direction: column;
+  gap: 0.625rem;
+  line-height: 1.375rem;
+  text-align: left;
+}
+.financial-help__requisite li {
+  font-weight: 200;
+}
+.financial-help__requisite li strong {
+  font-weight: 400;
+}
+.financial-help__note {
+  font-size: 0.6875rem;
+  font-weight: 200;
+  line-height: 0.859375rem;
+  text-align: center;
+  margin-top: 20px;
+}
+.financial-help__donate-button {
+  background-color: #4796F3;
+  color: white;
+  padding: 0.75rem 3.75rem;
+  border: none;
+  border-radius: 30px;
+  font-size: 1.125rem;
+  font-weight: 300;
+  line-height: 1.375rem;
+  text-align: left;
+  margin-top: 20px;
 }
 
 /*# sourceMappingURL=index.css.map */
