--- a/src/styles/index.scss
+++ b/src/styles/index.scss
@@ -20,3 +20,5 @@ sass --watch src/styles/index.scss src/index.css
 @import './blocks/hero.scss';
 @import './blocks/our-mission.scss';
 @import './blocks/adopt-steps.scss';
+@import './blocks/how-to-adopt.scss';
+@import './blocks/donation-section.scss';
