--- a/src/styles/blocks/footer.scss
+++ b/src/styles/blocks/footer.scss
@@ -26,8 +26,10 @@
     width: 611.38px;
     height: 170px;
     bottom: 0;
-    left: 0;
-    background-image: url("././assets/icons/footer-bg-item2.svg");
+    left: -120px;
+	rotate: 180deg;
+
+    background-image: url("././assets/icons/footer-bg-item1.svg");
   }
 }
 
