--- a/src/styles/blocks/how-to-adopt.scss
+++ b/src/styles/blocks/how-to-adopt.scss
@@ -28,6 +28,8 @@
 	position: relative;
 	overflow: hidden;
 
+	max-height: 295px;
+
 	&--1 {
 		background-color: $step--blue;
 		&::after{
@@ -120,6 +122,7 @@
 
 }
 .how-to-adopt__content {
+	flex-shrink: 10;
 	display: flex;
 	flex-direction: column;
 	gap:12px;
