style(contacts): страница контактов + стили
feat(placeholder): тоображение плейсхолдеров в случае потери доступа к изображению
refactor: перенес верстку в реакт компоненты

--- a/src/styles/index.scss
+++ b/src/styles/index.scss
@@ -22,3 +22,4 @@ sass --watch src/styles/index.scss src/index.css
 @import './blocks/adopt-steps.scss';
 @import './blocks/how-to-adopt.scss';
 @import './blocks/donation-section.scss';
+@import './blocks/contacts.scss';
