--- a/src/index.css
+++ b/src/index.css
@@ -168,6 +168,7 @@ img {
   font-size: 2rem;
   line-height: 2.625rem;
   text-align: center;
+  margin-top: 40px;
 }
 
 .title-h2 {
@@ -971,6 +972,13 @@ img {
   transform: scaleX(-1);
   background-image: url("././assets/icons/drown-cat.svg");
 }
+.ways-to-help__donation-card:first-child::before {
+  width: 74px;
+  height: 81px;
+  top: 175px;
+  left: -125px;
+  background-image: url("././assets/icons/heart-with-curl.svg");
+}
 .ways-to-help__donation-card:first-child .title-h1::before {
   content: "";
   position: absolute;
@@ -1200,6 +1208,44 @@ img {
   font-weight: 200;
   line-height: 1.375rem;
   margin-bottom: 1rem;
+}
+
+.contacts {
+  display: flex;
+  flex-direction: column;
+  align-items: center;
+}
+.contacts__info {
+  margin-top: 120px;
+  margin-bottom: 500px;
+  display: flex;
+  flex-direction: column;
+  width: 573px;
+  gap: 15px;
+}
+.contacts__item {
+  display: flex;
+  justify-content: space-between;
+}
+.contacts__item:not(:last-child) {
+  padding-bottom: 15px;
+  border-bottom: 1px solid black;
+}
+.contacts__label {
+  align-self: center;
+  font-size: 1.25rem;
+  font-weight: 400;
+  line-height: 1.75rem;
+}
+.contacts__value {
+  font-size: 1.25rem;
+  font-weight: 200;
+  line-height: 1.6875rem;
+  text-align: right;
+}
+.contacts__socials {
+  display: flex;
+  gap: 20px;
 }
 
 /*# sourceMappingURL=index.css.map */
