--- a/src/styles/blocks/donation-section.scss
+++ b/src/styles/blocks/donation-section.scss
@@ -86,6 +86,14 @@
 				background-image: url("././assets/icons/drown-cat.svg");
 			}
 
+			&::before {
+				width: 74px;
+				height: 81px;
+				top: 175px;
+				left: -125px;
+				background-image: url("././assets/icons/heart-with-curl.svg");
+			}
+
 			.title-h1 {			
 				&::before {
 					content: "";
@@ -102,13 +110,6 @@
 
 				}
 			}
-
-			// &::before {
-			// 	top: 11px;
-			// 	left: -215px;
-			// 	rotate: 200deg;
-			// 	background-image: url("././assets/icons/ways-to-help__bg-item--round.svg");
-			// }
 		}
 
 		&:last-child{
