--- a/src/index.css
+++ b/src/index.css
@@ -357,17 +357,18 @@ img {
 }
 .pets-section__type-filter {
   display: flex;
-  gap: 30px;
+  gap: 10px;
   align-items: center;
 }
 .pets-section__type-filter-item {
   line-height: 1.375rem;
   font-weight: 200;
+  padding: 0.3125rem 1.5625rem;
+  border: 1px solid transparent;
   cursor: pointer;
 }
 .pets-section__type-filter-item--active {
-  padding: 0.3125rem 1.5625rem;
-  border: 1px solid black;
+  border-color: black;
   border-radius: 20px;
 }
 .pets-section__filter-button {
