--- a/src/styles/blocks/pet-list-section.scss
+++ b/src/styles/blocks/pet-list-section.scss
@@ -9,18 +9,20 @@
 
   &__type-filter {
     display: flex;
-    gap: 30px;
+    gap: 10px;
     align-items: center;
   }
 
   &__type-filter-item {
     line-height: 1.375rem;
     font-weight: 200;
+	padding: 0.3125rem 1.5625rem;
+	border: 1px solid transparent;
+
     cursor: pointer;
 
     &--active {
-      padding: 0.3125rem 1.5625rem;
-      border: 1px solid black;
+      border-color: black;
       border-radius: 20px;
     }
   }
