--- a/src/index.css
+++ b/src/index.css
@@ -1,4 +1,3 @@
-@charset "UTF-8";
 /* 
 cd animal-shelter  
 sass --watch src/styles/index.scss src/index.css
@@ -276,25 +275,24 @@ img {
   aspect-ratio: 59/14;
 }
 .pet-card__main-photo {
-  display: block;
   border-radius: 10px;
-  width: 100%;
-  height: 100%;
   max-width: 590px;
-  max-height: 450px;
+  height: 450px;
+  object-fit: cover;
 }
 .pet-card__slider {
   display: grid;
   grid-template-rows: repeat(3, 1fr);
-  gap: 15px;
+  overflow: hidden;
+  height: 100%;
 }
 .pet-card__slider-item img {
   border-radius: 6px;
-  width: 100%;
-  height: 100%; /* Высота изображения равна высоте контейнера */
-  max-height: 140px;
-  object-fit: cover; /* Изображение масштабируется и обрезается, сохраняя пропорции */
-  overflow: hidden; /* Скрывает обрезанные части */
+  max-width: 140px;
+  height: 140px;
+  aspect-ratio: 1/1;
+  object-fit: cover;
+  overflow: hidden;
 }
 .pet-card__slider-item--active img {
   opacity: 0.5;
@@ -1214,7 +1212,7 @@ img {
 }
 .contacts__info {
   margin-top: 120px;
-  margin-bottom: 500px;
+  margin-bottom: 280px;
   display: flex;
   flex-direction: column;
   width: 573px;
