--- a/src/styles/blocks/card.scss
+++ b/src/styles/blocks/card.scss
@@ -112,28 +112,26 @@
     }
 
     &__main-photo {
-        display: block;
         border-radius: 10px;
-        width: 100%;
-        height: 100%;
-        max-width: 590px;
-        max-height: 450px; 
+        max-width: 590px; 
+        height: 450px;
+        object-fit: cover;
     }
 
     &__slider {
         display: grid;
         grid-template-rows: repeat(3, 1fr);
-        gap: 15px;
-
+        overflow: hidden;  
+        height: 100%;  
+        
         &-item {
             img {
-				border-radius: 6px;  
-				width: 100%;
-				height: 100%;        /* Высота изображения равна высоте контейнера */
-				max-height: 140px;
-				object-fit: cover;   /* Изображение масштабируется и обрезается, сохраняя пропорции */
-				overflow: hidden;    /* Скрывает обрезанные части */
-				
+                border-radius: 6px;
+                max-width: 140px;  
+				height: 140px;
+				aspect-ratio: 1/1;
+                object-fit: cover;  
+                overflow: hidden; 
             }
 
             &--active img {
@@ -142,6 +140,7 @@
         }
     }
 }
+
 
 .more-info {
     display: flex;
