--- a/src/styles/blocks/card.scss
+++ b/src/styles/blocks/card.scss
@@ -132,6 +132,7 @@
 				aspect-ratio: 1/1;
                 object-fit: cover;  
                 overflow: hidden; 
+				cursor: pointer;
             }
 
             &--active img {
