--- a/src/styles/blocks/adopt-steps.scss
+++ b/src/styles/blocks/adopt-steps.scss
@@ -21,6 +21,8 @@
         padding: 30px 15px 30px 30px;
         border-radius: 20px;
         overflow: hidden;
+
+		cursor: pointer;
     
         &--1 {
             background-color: $step--blue;
