--- a/src/styles/blocks/donation-section.scss
+++ b/src/styles/blocks/donation-section.scss
@@ -153,8 +153,9 @@
 
 	&::before {
 		top: 11px;
-		left: -215px;
-		rotate: 200deg;
+		left: -270px;
+		rotate: 30deg;
+		transform: scaleX(-1);
 		background-image: url("././assets/icons/ways-to-help__bg-item--round.svg");
 	}
 }
@@ -325,43 +326,48 @@
 	display: flex;
 	flex-direction: column;
 	gap: 30px;
-
+  
 	h2 {
-		font-size: 2rem;
-		font-weight: 400;
-		line-height: 2.625rem;
-		text-align: left;
-		margin-bottom: 30px;
+	  font-size: 2rem;
+	  font-weight: 400;
+	  line-height: 2.625rem;
+	  text-align: left;
+	  margin-bottom: 30px;
 	}
-}
-.shelter-needs__list {
-	display: grid;
-	grid-template-columns: repeat(2, 582.5px);
-	gap: 30px;
-}
-.shelter-needs__card {
-	background-color: white;
-	padding: 20px;
-	display: flex;
-	border-radius: 10px;
-	gap: 20px;
-
-	&:hover {
+  
+	&__list {
+	  display: grid;
+	  grid-template-columns: repeat(2, 582.5px);
+	  gap: 30px;
+	}
+  
+	&__card {
+	  background-color: white;
+	  padding: 20px;
+	  display: flex;
+	  border-radius: 10px;
+	  gap: 20px;
+	  transition: transform 0.3s ease, box-shadow 0.3s ease;
+  
+	  &:hover {
 		transform: translateY(-5px);
 		box-shadow: 0 6px 12px rgba(0, 0, 0, 0.15);
-	}
-}
-.shelter-needs__card-content {
-	h3 {
-		font-size: 1.5rem;
-		font-weight: 300;
-		line-height: 2rem;
-		margin-bottom: 20px;
-	}
-	p {
-		font-size: 1rem;
-		font-weight: 200;
-		line-height: 1.375rem;
-		margin-bottom: 1rem;
+	  }
+  
+	  &-content {
+		h3 {
+		  font-size: 1.5rem;
+		  font-weight: 300;
+		  line-height: 2rem;
+		  margin-bottom: 20px;
+		}
+  
+		p {
+		  font-size: 1rem;
+		  font-weight: 200;
+		  line-height: 1.375rem;
+		  margin-bottom: 1rem;
+		}
+	  }
 	}
 }
