feat(AdoptList): отображение загрузки всего блока если данных еще нет
feat(AdoptListBrief): новый компонент в MainPage

--- a/src/index.css
+++ b/src/index.css
@@ -419,6 +419,22 @@ img {
   font-weight: 100;
 }
 
+.brief-list {
+  margin: 80px auto;
+}
+.brief-list__container {
+  display: flex;
+  justify-content: space-between;
+  margin-bottom: 20px;
+}
+.brief-list__view-all-btn {
+  font-size: 1.25rem;
+  font-weight: 300;
+  line-height: 1.5625rem;
+  text-align: left;
+  padding: 0.75rem 3.75rem;
+}
+
 .main-footer {
   margin-top: 125px;
   background-color: #EFF6FF;
