feat(PetCardFull): список других питомцев

--- a/src/index.css
+++ b/src/index.css
@@ -346,6 +346,11 @@ img {
   line-height: 1.5rem;
 }
 
+.other-pets {
+  margin-top: 70px;
+  margin-bottom: 125px;
+}
+
 .pets-section {
   margin-top: 40px;
 }
