--- a/src/styles/index.scss
+++ b/src/styles/index.scss
@@ -23,3 +23,4 @@ sass --watch src/styles/index.scss src/index.css
 @import './blocks/how-to-adopt.scss';
 @import './blocks/donation-section.scss';
 @import './blocks/contacts.scss';
+@import './blocks/our-shelter-page.scss';
