--- a/src/index.css
+++ b/src/index.css
@@ -656,6 +656,7 @@ img {
   display: flex;
   flex-direction: column;
   gap: 12px;
+  cursor: pointer;
 }
 .our-shelter__header {
   display: flex;
@@ -780,26 +781,22 @@ img {
 .how-to-adopt {
   margin-top: 40px;
 }
-
 .how-to-adopt__list {
   display: flex;
   flex-direction: column;
   gap: 80px;
   margin-top: 50px;
 }
-
 .how-to-adopt__step {
   display: flex;
   gap: 40px;
 }
-
 .how-to-adopt__step-card-wrapper {
   width: 373px;
   display: flex;
   flex-direction: column;
   justify-content: space-between;
 }
-
 .how-to-adopt__step-card {
   display: flex;
   max-width: 373px;
@@ -809,6 +806,33 @@ img {
   position: relative;
   overflow: hidden;
   max-height: 295px;
+}
+.how-to-adopt__step-card::before {
+  content: "";
+  position: absolute;
+  top: -206px;
+  left: -204px;
+  background-color: transparent;
+  border-radius: 50%;
+  border: 4px solid white;
+  width: 353px;
+  height: 307px;
+}
+.how-to-adopt__step-card::after {
+  content: "";
+  position: absolute;
+  width: 282px;
+  height: 286px;
+  top: 0;
+  right: -30px;
+  background-repeat: no-repeat;
+}
+.how-to-adopt__step-card p {
+  margin-top: auto;
+  font-size: 1.5rem;
+  font-weight: 300;
+  line-height: 2rem;
+  text-align: left;
 }
 .how-to-adopt__step-card--1 {
   background-color: #D2E6FF;
@@ -838,34 +862,6 @@ img {
 .how-to-adopt__step-card--3 .how-to-adopt__step-number::after {
   background-image: url("././assets/icons/number-3.svg");
 }
-.how-to-adopt__step-card p {
-  margin-top: auto;
-  font-size: 1.5rem;
-  font-weight: 300;
-  line-height: 2rem;
-  text-align: left;
-}
-.how-to-adopt__step-card::before {
-  content: "";
-  position: absolute;
-  top: -206px;
-  left: -204px;
-  background-color: transparent;
-  border-radius: 50%;
-  border: 4px solid white;
-  width: 353px;
-  height: 307px;
-}
-.how-to-adopt__step-card:after {
-  content: "";
-  position: absolute;
-  width: 282px;
-  height: 286px;
-  top: 0px;
-  right: -30px;
-  background-repeat: no-repeat;
-}
-
 .how-to-adopt__step-number {
   position: absolute;
   border-radius: 50%;
@@ -886,7 +882,6 @@ img {
   width: 18.5px;
   height: 40px;
 }
-
 .how-to-adopt__questionnaire {
   padding: 1rem 2.25rem;
   width: 100%;
@@ -894,7 +889,6 @@ img {
   font-weight: 300;
   line-height: 2rem;
 }
-
 .how-to-adopt__content {
   flex-shrink: 10;
   display: flex;
@@ -902,13 +896,13 @@ img {
   gap: 12px;
   max-width: 787px;
 }
-.how-to-adopt__content p, .how-to-adopt__content li {
+.how-to-adopt__content p,
+.how-to-adopt__content li {
   font-size: 1.25rem;
   font-weight: 200;
   line-height: 1.6875rem;
   text-align: left;
 }
-
 .how-to-adopt__content ol {
   list-style-type: decimal;
   margin-left: 1.5rem;
@@ -1263,6 +1257,80 @@ img {
 .contacts__socials {
   display: flex;
   gap: 20px;
+}
+
+.our-shelter-section {
+  margin-top: 40px;
+  margin-bottom: 125px;
+}
+.our-shelter-section__container {
+  margin-top: 30px;
+  margin-bottom: 50px;
+  display: flex;
+  gap: 40px;
+}
+.our-shelter-section__content {
+  display: flex;
+  flex-direction: column;
+  gap: 12px;
+  max-width: 680px;
+}
+.our-shelter-section__content p {
+  font-size: 1rem;
+  font-weight: 200;
+  line-height: 1.375rem;
+  text-align: left;
+}
+.our-shelter-section__title {
+  font-size: 2rem;
+  font-weight: 400;
+  line-height: 2.625rem;
+  text-align: center;
+}
+.our-shelter-section__gallery {
+  margin-top: 30px;
+  display: grid;
+  gap: 20px;
+  grid-template-columns: repeat(4, 1fr);
+  overflow-x: auto;
+  overflow-y: hidden;
+  white-space: nowrap;
+}
+.our-shelter-section__gallery img {
+  cursor: pointer;
+}
+
+.lightbox {
+  position: fixed;
+  top: 0;
+  left: 0;
+  width: 100vw;
+  height: 100vh;
+  background-color: rgba(0, 0, 0, 0.8);
+  display: flex;
+  justify-content: center;
+  align-items: center;
+  z-index: 2;
+}
+.lightbox__close {
+  position: absolute;
+  top: 20px;
+  right: 350px;
+  background: none;
+  color: white;
+  border: none;
+  font-size: 2rem;
+  cursor: pointer;
+}
+.lightbox__swiper {
+  width: 60%;
+  height: 80%;
+}
+.lightbox__image {
+  width: auto;
+  height: 100%;
+  border-radius: 10px;
+  margin: 0 auto;
 }
 
 /*# sourceMappingURL=index.css.map */
