--- a/src/index.css
+++ b/src/index.css
@@ -353,6 +353,7 @@ img {
 
 .pets-section {
   margin-top: 40px;
+  margin-bottom: 125px;
 }
 .pets-section__filter-cont {
   display: flex;
@@ -441,7 +442,6 @@ img {
 }
 
 .main-footer {
-  margin-top: 125px;
   background-color: #EFF6FF;
   padding: 67px 0;
   position: relative;
@@ -469,8 +469,7 @@ img {
   rotate: 180deg;
   background-image: url("././assets/icons/footer-bg-item1.svg");
 }
-
-.footer-cont {
+.main-footer .footer-cont {
   display: flex;
   flex-direction: column;
   align-items: center;
@@ -479,42 +478,39 @@ img {
   box-sizing: border-box;
   margin: 0 auto;
 }
-
-.footer-cont__logo-cont {
+.main-footer .footer-cont__logo-cont {
   display: flex;
   align-items: center;
   gap: 16px;
   margin-bottom: 40px;
 }
-.footer-cont__logo-cont .footer-cont__logo-img {
+.main-footer .footer-cont__logo-cont__logo-img {
   width: 74.67px;
   max-height: auto;
 }
-.footer-cont__logo-cont .footer-cont__logo-name {
+.main-footer .footer-cont__logo-cont__logo-name {
   font-weight: 300;
   font-size: 2rem;
   line-height: 2.39rem;
   margin-bottom: 5px;
 }
-.footer-cont__logo-cont .footer-cont__logo-description {
+.main-footer .footer-cont__logo-cont__logo-description {
   font-weight: 300;
   font-size: 1.33rem;
   line-height: 1.6rem;
 }
-
-.footer-cont__shelter-desc {
+.main-footer .footer-cont__shelter-desc {
   font-size: 1.25rem;
   font-weight: 500;
   line-height: 1.75rem;
   text-align: center;
   margin-bottom: 70px;
 }
-
-.footer-cont__social-media-cont {
+.main-footer .footer-cont__social-media-cont {
   display: flex;
   gap: 20px;
 }
-.footer-cont__social-media-cont .footer-cont__social-media-item > img {
+.main-footer .footer-cont__social-media-cont__social-media-item > img {
   width: 40px;
   height: 40px;
 }
@@ -698,6 +694,7 @@ img {
 .adopt-steps {
   text-align: center;
   padding: 40px;
+  margin-bottom: 125px;
 }
 .adopt-steps__title {
   text-align: left;
@@ -780,6 +777,7 @@ img {
 
 .how-to-adopt {
   margin-top: 40px;
+  margin-bottom: 125px;
 }
 .how-to-adopt__list {
   display: flex;
@@ -1268,6 +1266,9 @@ img {
   margin-bottom: 50px;
   display: flex;
   gap: 40px;
+}
+.our-shelter-section__container img {
+  flex: 1;
 }
 .our-shelter-section__content {
   display: flex;
