--- a/src/index.css
+++ b/src/index.css
@@ -86,6 +86,10 @@ body {
   margin: 0 auto;
 }
 
+.hidden {
+  display: none;
+}
+
 p,
 a,
 button {
@@ -420,9 +424,48 @@ img {
   text-align: center;
   font-size: 3rem;
 }
+.pets-section__empty-pets {
+  margin-top: 50px;
+  text-align: center;
+  font-size: 2.5rem;
+}
 .pets-section__pet-description {
   line-height: 1.375rem;
   font-weight: 100;
+}
+.pets-section__filters-container {
+  position: relative;
+  font-size: 1rem;
+  font-weight: 200;
+  line-height: 22px;
+  cursor: pointer;
+}
+.pets-section__filters-container .filter-container {
+  position: absolute;
+  top: 38px;
+  right: 0;
+  width: 202px;
+  background-color: white;
+  padding: 20px;
+  padding-top: 12px;
+  border-radius: 8px;
+  box-shadow: 0px 4px 8px 0px rgba(82, 117, 158, 0.2509803922);
+}
+.pets-section__filters-container .filter-title {
+  font-size: 1rem;
+  font-weight: 300;
+  line-height: 1.25rem;
+}
+.pets-section__filters-container .age-filter-items-container {
+  margin-top: 8px;
+  display: flex;
+  flex-direction: column;
+  gap: 8px;
+}
+.pets-section__filters-container .age-filter-items-container li {
+  font-size: 14px;
+  font-weight: 200;
+  line-height: 17.5px;
 }
 
 .brief-list {
