--- a/src/styles/blocks/pet-list-section.scss
+++ b/src/styles/blocks/pet-list-section.scss
@@ -114,6 +114,10 @@
 			box-shadow: 0px 4px 8px 0px #52759e40;
 		}
 
+		.filter-item-cont{
+			margin-top: 16px;
+		}
+
 		.filter-title {
 			font-size: 1rem;
 			font-weight: 300;
